--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,6 @@ spring:
     username: ims
     password: ims12!@
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://localhost:3306/ims?serverTimezone=UTF&allowPublicKeyRetrieval=true
+    jdbc-url: jdbc:mysql://localhost:3306/ims?serverTimezone=UTC&allowPublicKeyRetrieval=true
+
+  
