--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,35 @@
+spring:
+  profiles:
+    default: local
+
+---
+
 server:
-  port: 8080
+  port: 8090
 
 spring:
+  config:
+    activate:
+      on-profile: dev
   datasource:
     username: ims
     password: ims12!@
     driver-class-name: com.mysql.cj.jdbc.Driver
     jdbc-url: jdbc:mysql://192.168.0.17:3309/ims?serverTimezone=UTC&allowPublicKeyRetrieval=true
+
+---
+
+server:
+  port: 8080
+
+spring:
+  config:
+    activate:
+      on-profile: local
+  datasource:
+    username: ims
+    password: ims12!@
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    jdbc-url: jdbc:mysql://localhost:3306/ims?serverTimezone=UTC&allowPublicKeyRetrieval=true
 
   
