--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,11 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0-b170201.1204</version>
 			</dependency>
-		
+		<dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
 	</dependencies>
 	
 	  <profiles>
